force-app/main/default/src/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Copy_Account__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Copy_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should Adobe Sign copy the first Contact recipient’s Account lookup to the Agreement’s Account lookup?</inlineHelpText>
    <label>Copy Contact Account</label>
    <type>Checkbox</type>
</CustomField>