force-app/main/default/src/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Copy_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Copy_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should Adobe Sign copy the first Contact recipient’s Opportunity lookup to the Agreement’s Opportunity lookup?</inlineHelpText>
    <label>Copy Contact Opportunity</label>
    <type>Checkbox</type>
</CustomField>