force-app/main/default/src/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Create_If_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Create_If_Not_Found__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specifies which Recipient type to create (Contact / Lead) in case no existing recipients (as specified in the Recipient Lookup Order) were found.</inlineHelpText>
    <label>Auto Create Recipient Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>