force-app/main/default/src/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Enable_Participation_Sets__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Participation_Sets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this setting to create/update Participation Sets</inlineHelpText>
    <label>Enable Participation Sets</label>
    <type>Checkbox</type>
</CustomField>