force-app/main/default/src/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Recipient_Email_Domain_Ignore_List__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Email_Domain_Ignore_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If a recipient email address belongs to one of these email domains, no Recipient Object matching (as specified in the Recipient Lookup Order) will be performed and the recipient will be stored as email address.</inlineHelpText>
    <label>Recipient Lookup Domain Ignore List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>